<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 16__request_money strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="request_payment_string">Ingresar Dinero</string>
    <string name="add_payment_note_string">Agregar notas de transferencia(opcional)</string>
    <string name="payment_note_ek2_string">Notas de transferencia</string>
    <string name="_20_00_string">20.00</string>
    <string name="payment_amount_ek2_string">Cantidad a ingresar</string>
    <string name="reem_1993_gmail_com_string">reem_1993@gmail.com</string>
    <string name="reem_khaled_string">Reem Khaled</string>
    <string name="request_money_string">ingresar Dinero</string>
</resources>