<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		16__request_money
	 *	@date 		Wednesday 17th of April 2024 04:28:21 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/16__request_money" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page__16__request_money_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg___16__request_money_ek2"
					android:background="@drawable/_bg___16__request_money_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="812dp" />


				<ImageView android:id="@+id/rectangle"
						   android:src="@drawable/rectangle"
						   android:contentDescription="rectangle"
						   android:layout_marginStart="0dp"
						   android:layout_marginTop="731dp"
						   android:layout_width="375dp"
						   android:layout_height="81dp"/>
				<RelativeLayout android:id="@+id/request_button"
								android:layout_marginTop="747dp"
								android:layout_marginStart="15dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__request_button_ek1"
						android:background="@drawable/_bg__request_button_ek1_shape"
						 android:layout_marginStart="-15dp"
						android:layout_marginTop="-747dp"
						android:layout_width="345dp"
						android:layout_height="49dp" />

					<View   android:id="@+id/rectangle_ek1"
						android:background="@drawable/rectangle_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="345dp"
						android:layout_height="49dp" />

					<TextView android:id="@+id/request_payment"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="14sp"
						android:textColor="@color/_bg___16__request_money_ek2_color"
						android:layout_marginLeft="137dp"
						android:layout_marginTop="14dp"
						android:layout_width="102.4dp"
						android:layout_height="25.4dp"
						android:text="@string/request_payment_string"
						 />


					<RelativeLayout android:id="@+id/request_icon"
						android:layout_marginTop="14dp"
						android:layout_marginStart="105dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__request_icon_ek1"
							android:background="@drawable/_bg__request_icon_ek1_shape"
							 android:layout_marginStart="-120dp"
							android:layout_marginTop="-761dp"
							android:layout_width="21dp"
							android:layout_height="21dp" />

						<View   android:id="@+id/rectangle_ek2"
							android:background="@drawable/rectangle_ek2_shape"
							 android:alpha="0.0001"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="21dp"
							android:layout_height="21dp" />

						<ImageView android:id="@+id/path"
							android:src="@drawable/path"
							android:contentDescription="path"
							 android:layout_marginStart="4dp"
							android:layout_marginTop="4dp"
							android:layout_width="12.25dp"
							android:layout_height="12.25dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/payment_note"
					android:layout_marginTop="335dp"
					android:layout_marginStart="15dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__payment_note_ek1"
						android:background="@drawable/_bg__payment_note_ek1_shape"
						 android:layout_marginStart="-15dp"
						android:layout_marginTop="-335dp"
						android:layout_width="345dp"
						android:layout_height="229dp" />

					<View   android:id="@+id/rectangle_ek3"
						android:background="@drawable/rectangle_ek3_shape"
						 android:layout_marginStart="-1dp"
						android:layout_marginTop="28dp"
						android:layout_width="345dp"
						android:layout_height="200dp" />

					<TextView android:id="@+id/add_payment_note"
						android:alpha="0.2494"
						 android:textSize="14sp"
						android:textColor="@color/add_payment_note_color"
						android:layout_marginLeft="14dp"
						android:layout_marginTop="43dp"
						android:layout_width="268.4dp"
						android:layout_height="25.4dp"
						android:text="@string/add_payment_note_string"
						 />

					<TextView android:id="@+id/payment_note_ek2"
						android:textSize="14sp"
						android:textColor="@color/add_payment_note_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="155.4dp"
						android:layout_height="25.4dp"
						android:text="@string/payment_note_ek2_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/payment_amount"
					android:layout_marginTop="218dp"
					android:layout_marginStart="15dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__payment_amount_ek1"
						android:background="@drawable/_bg__payment_amount_ek1_shape"
						 android:layout_marginStart="-15dp"
						android:layout_marginTop="-218dp"
						android:layout_width="345dp"
						android:layout_height="85dp" />

					<View   android:id="@+id/rectangle_ek4"
						android:background="@drawable/rectangle_ek4_shape"
						 android:layout_marginStart="-1dp"
						android:layout_marginTop="28dp"
						android:layout_width="345dp"
						android:layout_height="56dp" />

					<View   android:id="@+id/rectangle_ek5"
						android:background="@drawable/rectangle_ek5_shape"
						 android:layout_marginStart="65dp"
						android:layout_marginTop="45dp"
						android:layout_width="1dp"
						android:layout_height="24dp" />

					<TextView android:id="@+id/_20_00"
						android:textSize="16sp"
						android:textColor="@color/rectangle_ek1_color"
						android:layout_marginLeft="16dp"
						android:layout_marginTop="45dp"
						android:layout_width="56.6dp"
						android:layout_height="28.6dp"
						android:text="@string/_20_00_string"
						 />

					<TextView android:id="@+id/payment_amount_ek2"
						android:textSize="14sp"
						android:textColor="@color/add_payment_note_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="135.4dp"
						android:layout_height="25.4dp"
						android:text="@string/payment_amount_ek2_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/contact_info"
					android:layout_marginTop="126dp"
					android:layout_marginStart="15dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__contact_info_ek1"
						android:background="@drawable/_bg__contact_info_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="192dp"
						android:layout_height="60dp" />

					<TextView android:id="@+id/reem_1993_gmail_com"
						android:alpha="0.4"
						 android:textSize="12sp"
						android:textColor="@color/add_payment_note_color"
						android:layout_marginLeft="72dp"
						android:layout_marginTop="32dp"
						android:layout_width="128.2dp"
						android:layout_height="21.2dp"
						android:text="@string/reem_1993_gmail_com_string"
						 />

					<TextView android:id="@+id/reem_khaled"
						android:textSize="14sp"
						android:textColor="@color/add_payment_note_color"
						android:layout_marginLeft="72dp"
						android:layout_marginTop="10dp"
						android:layout_width="88.4dp"
						android:layout_height="25.4dp"
						android:text="@string/reem_khaled_string"
						 />

					<ImageView android:id="@+id/profile_picture"
						android:src="@drawable/profile_picture"
						android:contentDescription="profile_picture"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="60dp"
						android:layout_height="60dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/header"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__header_ek1"
						android:background="@drawable/_bg__header_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="375dp"
						android:layout_height="102dp" />

					<View   android:id="@+id/rectangle_ek6"
						android:background="@drawable/rectangle_ek6_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="375dp"
						android:layout_height="102dp" />

					<View   android:id="@+id/divider"
						android:background="@drawable/divider_shape"
						 android:alpha="0.1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="101dp"
						android:layout_width="375dp"
						android:layout_height="1dp" />

					<TextView android:id="@+id/request_money"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="20sp"
						android:textColor="@color/add_payment_note_color"
						android:layout_marginLeft="117dp"
						android:layout_marginTop="56dp"
						android:layout_width="143dp"
						android:layout_height="36dp"
						android:text="@string/request_money_string"
						 />


					<RelativeLayout android:id="@+id/back_icon"
						android:layout_marginTop="59dp"
						android:layout_marginStart="15dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg___back_icon_ek1"
							android:background="@drawable/_bg___back_icon_ek1_shape"
							 android:layout_marginStart="-15dp"
							android:layout_marginTop="-59dp"
							android:layout_width="24dp"
							android:layout_height="24dp" />

						<View   android:id="@+id/rectangle_ek7"
							android:background="@drawable/rectangle_ek7_shape"
							 android:alpha="0.0001"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="24dp"
							android:layout_height="24dp" />


						<RelativeLayout android:id="@+id/short_arrow_left"
							android:layout_marginTop="7dp"
							android:layout_marginStart="5dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__short_arrow_left_ek1"
								android:background="@drawable/_bg__short_arrow_left_ek1_shape"
								 android:layout_marginStart="-20dp"
								android:layout_marginTop="-66dp"
								android:layout_width="14dp"
								android:layout_height="11dp" />

							<ImageView android:id="@+id/shape"
								android:src="@drawable/shape"
								android:contentDescription="shape"
								 android:layout_marginStart="-2dp"
								android:layout_marginTop="-2dp"
								android:layout_width="14dp"
								android:layout_height="11dp" />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/status_bar"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__status_bar_ek1"
							android:background="@drawable/_bg__status_bar_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="375dp"
							android:layout_height="40dp" />

						<View   android:id="@+id/rectangle_ek8"
							android:background="@drawable/rectangle_ek8_shape"
							 android:alpha="0.0001"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="375dp"
							android:layout_height="40dp" />

						<ImageView android:id="@+id/path_ek1"
							android:src="@drawable/path_ek1"
							android:contentDescription="path_ek1"
							 android:layout_marginStart="326dp"
							android:layout_marginTop="13dp"
							android:layout_width="23dp"
							android:layout_height="12.33dp" />

						<ImageView android:id="@+id/path_ek2"
							android:src="@drawable/path_ek2"
							android:contentDescription="path_ek2"
							 android:layout_marginStart="327dp"
							android:layout_marginTop="14dp"
							android:layout_width="22dp"
							android:layout_height="11.33dp" />

						<ImageView android:id="@+id/path_ek3"
							android:src="@drawable/path_ek3"
							android:contentDescription="path_ek3"
							 android:layout_marginStart="350dp"
							android:layout_marginTop="18dp"
							android:layout_width="1.33dp"
							android:layout_height="4dp" />

						<ImageView android:id="@+id/path_ek4"
							android:src="@drawable/path_ek4"
							android:contentDescription="path_ek4"
							 android:layout_marginStart="329dp"
							android:layout_marginTop="16dp"
							android:layout_width="18dp"
							android:layout_height="7.33dp" />

						<ImageView android:id="@+id/shape_ek1"
							android:src="@drawable/shape_ek1"
							android:contentDescription="shape_ek1"
							 android:layout_marginStart="307dp"
							android:layout_marginTop="14dp"
							android:layout_width="15.28dp"
							android:layout_height="10.97dp" />

						<ImageView android:id="@+id/shape_ek2"
							android:src="@drawable/shape_ek2"
							android:contentDescription="shape_ek2"
							 android:layout_marginStart="285dp"
							android:layout_marginTop="14dp"
							android:layout_width="17dp"
							android:layout_height="10.67dp" />

						<ImageView android:id="@+id/shape_ek3"
							android:src="@drawable/shape_ek3"
							android:contentDescription="shape_ek3"
							 android:layout_marginStart="24dp"
							android:layout_marginTop="15dp"
							android:layout_width="27.45dp"
							android:layout_height="10.36dp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>